--- a/tyylit/styles.css
+++ b/tyylit/styles.css
@@ -1,1 +1,25 @@
+    body {
+        color:white;
+        background color:black;
+    }
+    h1 {
+        font-size:20px;
+    }
+    p {
+        font-size:12px;
+        color:green;
+    }
+    div {
 
+    }
+    .oma-runo {
+        border:dotted 2px;
+        width:100px;
+        height:100px;
+    }
+    ol {
+        list-style-type:lower-alpha;
+    }
+    ul {
+        list-style-type:square;
+    }
