--- a/tyylit/styles.css
+++ b/tyylit/styles.css
@@ -1,6 +1,6 @@
     body {
         color:white;
-        background color:black;
+        background-color:black;
     }
     h1 {
         font-size:20px;
